finally solved the overflow problem

--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -5,7 +5,6 @@
   flex: 1;
 }
 .chat__header {
-  display: flex;
   padding: 10px;
   box-shadow: 0 3px 0px #dfdfdf;
 }
@@ -14,9 +13,10 @@
   padding-left: 20px;
 }
 .chat__body {
-  flex: 1;
+  /* flex: 1; */
   padding-top: 30px;
-  position: relative;
+  /* position: relative; */
+  overflow: scroll;
 }
 .chat__message {
   position: relative;
@@ -46,9 +46,6 @@
 
 .chat__footer {
   padding: 11px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   margin-bottom: 2%;
 }
 .chat__footer > form {
